Pagination added. Mappers changed. Minor fixes: some renames